# crunch

./: CMakeLists.txt  README.md
res/: allcharsonce.huff  alphaonce.huff  bender.huff  d_dictionary.txt  d_hellokitty.txt  d_short.txt  dictionary.huff  excellent.huff  fibonacci.huff  fibonacci.py  fibonacci.txt  fibonacci_d.txt  hello.huff  hellokitty.huff  iconstrip.huff  iconstripp.txt  moo_d.txt  out.huff  short.huff  shorter.huff  test.huff  test2.huff  tomsawyer.huff
src/: HuffmanNode.cpp  HuffmanNode.h  chunkreader.cpp  chunkreader.h  chunkwriter.cpp  chunkwriter.h  crunchmain.cpp  encoding.cpp  encoding.h  huffmanmain.cpp  huffmanutil.cpp
